--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="not_found_key">Not found driver with key</string>
     <string name="title_activity_request_driver">Map</string>
 
+    <string name="title_activity_profile">Profile</string>
 
 </resources>
