--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,8 @@
     <string name="done">DONE</string>
     <string name="itemname">Item Name</string>
     <string name="itemimage">Item Image</string>
-    <string name="scedule">Scedule</string>
+    <string name="From">from</string>
+    <string name="To">to</string>
     <string name="available">Availability</string>
     <string name="price">Price</string>
 
