--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,13 @@
     <string name="title_activity_request_driver">Map</string>
     <string name="title_activity_profile">Profile</string>
 
+    <string-array name="categories">
+        <item>Burger</item>
+        <item>Drinks</item>
+        <item>Frozen</item>
+        <item>Desserts</item>
+        <item>Salads</item>
+
+    </string-array>
+
 </resources>
