--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-
     <string name="action_settings">Settings</string>
     <string name="email">Email Id</string>
     <string name="passowrd">Password</string>
@@ -36,7 +35,6 @@
     <string name="To">to</string>
     <string name="available">Availability</string>
     <string name="price">Price</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_find_driver">Map</string>
@@ -44,12 +42,6 @@
     <string name="title_activity_request_driver">Map</string>
     <string name="title_activity_profile">Profile</string>
 
-    <string-array name="categories">
-        <item>Main Course</item>
-        <item>Drinks</item>
-        <item>Frozen</item>
-        <item>Sides</item>
-        <item>Desserts</item>
-    </string-array>
+    <string name="select_category">Please select your item category</string>
 
 </resources>
