--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kitchen</string>
+    <string name="app_name">CHJ Kitchen</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -43,5 +43,7 @@
     <string name="title_activity_profile">Profile</string>
 
     <string name="select_category">Please select your item category</string>
+    <string name="description">Description</string>
+    <string name="quantity">Quantity</string>
 
 </resources>
