--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_find_rider">Map</string>
-    <string name="swipe_left_and_right_to_edit_and_delete"><![CDATA[<<< Swipe left and right to edit and delete >>>]]></string>
+    <string name="swipe_left_and_right_to_edit_and_delete"><![CDATA[<<< Swipe left or right to edit or delete >>>]]></string>
 
 </resources>
